FEAT: adicionando caminho routes

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/RafaelSFsoares/proviHack-time23#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql2": "^2.3.3",
     "path": "^0.12.7",
