--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/RafaelSFsoares/proviHack-time23.git"
   },
-  "author": "Rafael Soares, Matheus Germano, Camila Rangel, Julia Villela, Joyce Luzia, Helio Franco",
+  "author": "Rafael Soares, Matheus Germano, Camila Rangel, Julia Villela, Joyce Lusia, Helio Franco",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/RafaelSFsoares/proviHack-time23/issues"
